name:                freddy
version:             0.1.0.0
homepage:            https://github.com/salemove/freddy-hs
license:             MIT
license-file:        LICENSE
author:              Indrek Juhkam
maintainer:          indrek@urgas.eu
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   Network.Freddy
  build-depends:
    base        >= 4.8 && < 5,
    bytestring  >= 0.9,
    text        >= 0.11.2,
    amqp        >= 0.13.1
  hs-source-dirs:    src
  default-language:  Haskell2010

source-repository head
  type:     git
  location: https://github.com/salemove/freddy-hs
